--- a/style.css
+++ b/style.css
@@ -1,3 +1,25 @@
+main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  margin: 10px;
+}
+
+body { 
+  margin: 0%;        
+  font-family: Roboto, Verdana, Geneva, Tahoma, sans-serif;
+  }
+
+header {
+  display: flex;
+  margin-left: 0%;       
+  font-size: x-large;
+  width: 40%;
+  justify-content: space-evenly;
+  margin-top: 10px;
+} 
+
 /*Contact form*/
 
 .form-error {
@@ -42,23 +64,3 @@ a {
     margin-right: 5%;
   }
 
-main {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-}
-
-body { 
-    margin: 0%;        
-    font-family: Roboto, Verdana, Geneva, Tahoma, sans-serif;
-    }
-
-header {
-    display: flex;
-    margin-left: 0%;       
-    font-size: x-large;
-    width: 40%;
-    justify-content: space-evenly;
-    margin-top: 10px;
-} 
